cd has been removed again

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,24 +54,24 @@ Build:
     - docker tag $CI_REGISTRY_IMAGE:$CI_IMAGE_TAG $CI_REGISTRY_IMAGE:latest
     - docker push $CI_REGISTRY_IMAGE:$CI_IMAGE_TAG
 
-Deploy Dev:
-  stage: deploy
-  image: debian:10-slim
-  only:
-    - master
-  before_script:
-    - apt update
-    - apt install --no-install-recommends -y openssh-client gettext-base
-    - eval $(ssh-agent -s)
-    - echo "$SSH_IDENTITY" | tr -d '\r' | ssh-add -
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - ssh-keyscan 13.51.166.10  >> ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts
-  script:
-    - mkdir content-service
-    - envsubst < .dev/docker-compose.template.yml > content-service/docker-compose.yml
-    - scp -r content-service dilay@13.51.166.10:/usr/local/lib/containers/
-    - ssh dilaygulhan@13.51.166.10  "cd /usr/local/lib/containers/content-service && docker compose up -d"
-
+#Deploy Dev:
+#  stage: deploy
+#  image: debian:10-slim
+#  only:
+#    - master
+#  before_script:
+#    - apt update
+#    - apt install --no-install-recommends -y openssh-client gettext-base
+#    - eval $(ssh-agent -s)
+#    - echo "$SSH_IDENTITY" | tr -d '\r' | ssh-add -
+#    - mkdir -p ~/.ssh
+#    - chmod 700 ~/.ssh
+#    - ssh-keyscan 13.51.166.10  >> ~/.ssh/known_hosts
+#    - chmod 644 ~/.ssh/known_hosts
+#  script:
+#    - mkdir content-service
+#    - envsubst < .dev/docker-compose.template.yml > content-service/docker-compose.yml
+#    - scp -r content-service dilay@13.51.166.10:/usr/local/lib/containers/
+#    - ssh dilaygulhan@13.51.166.10  "cd /usr/local/lib/containers/content-service && docker compose up -d"
+#
 
