--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ Deploy Dev:
   script:
     - mkdir content-service
     - envsubst < .dev/docker-compose.template.yml > content-service/docker-compose.yml
-    - scp -r content-service dilay@13.51.207.115:C:\Users\dilay\OneDrive\Masaüstü
-    - ssh dilaygulhan@13.51.207.115  "cd C:\Users\dilay\OneDrive\Masaüstü\youtubemusic && docker compose up -d"
+    - scp -r content-service dilay@13.51.207.115:C:\Users\dilay\OneDrive\masaustu
+    - ssh dilaygulhan@13.51.207.115  "cd C:\Users\dilay\OneDrive\masaustu\youtubemusic && docker compose up -d"
 
 
