--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,6 @@ Deploy Dev:
     - mkdir youtubemusic
     - envsubst < .dev/docker-compose.template.yml > youtubemusic/docker-compose.yml
     - scp -r content-service dilay@13.53.197.211:C:\Users\dilay\OneDrive\Desktop
-    - ssh dilaygulhan@13.53.197.211  "cd C:\Users\dilay\OneDrive\Desktop\YoutubeMusic && docker compose up -d"
+    - ssh dilaygulhan@13.53.197.211  "cd C:\Users\dilay\OneDrive\Desktop\youtubemusic && docker compose up -d"
 
 
