--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ Deploy Dev:
 
     - mkdir youtubemusic
     - envsubst < .dev/docker-compose.template.yml > youtubemusic/docker-compose.yml
-    - scp -r youtubemusic ec2-user@13.53.197.211:/c/Users/dilay/OneDrive/Belgeler
-    - ssh ec2-user@13.53.197.211  "cd /c/Users/dilay/OneDrive/Belgeler/youtubemusic && docker compose up -d"
+    - scp -r youtubemusic ec2-user@13.53.197.211:"C:\Users\dilay\OneDrive\Belgeler"
+#    - ssh ec2-user@13.53.197.211  "cd /c/Users/dilay/OneDrive/Belgeler/youtubemusic && docker compose up -d"
 
 
