--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,6 @@ Deploy Dev:
     - sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose 
      - sudo chmod +x /usr/local/bin/docker-compose 
      - sudo systemctl start docker 
-     - docker-compose up
+     - docker-compose up -d
 
 
