--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,10 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     url: ${DB_URL}
-
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
 swagger:
   enabled: true
   host: localhost:8080
