--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,8 @@ spring:
     platform: 'postgres'
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    url: ${DB_URL}
+    url: 'jdbc:postgresql://localhost:5432/musicappdemo'
+    driver-class-name: org.postgresql.Driver
   servlet:
     multipart:
       max-file-size: 10MB
