--- a/.dev/docker-compose.template.yml
+++ b/.dev/docker-compose.template.yml
@@ -6,7 +6,7 @@ services:
       - DB_URL=jdbc:postgresql://localhost:5432/musicappdemo
       - DB_USERNAME=postgres
       - DB_PASSWORD=2446
-      - JWT_SECRET="5367566B5970337336763979244226452948404D6351665468576D5A7134743777217A25432A462D4A614E645267556B586E3272357538782F413F4428472B4B"
+      - JWT_SECRET=${JWT_SECRET}
 
     restart: always
     network_mode: "host"
