--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,6 +54,25 @@ Build:
     - docker tag $CI_REGISTRY_IMAGE:$CI_IMAGE_TAG $CI_REGISTRY_IMAGE:latest
     - docker push $CI_REGISTRY_IMAGE:$CI_IMAGE_TAG
 
+
+Test:
+  image: $CI_BASE_IMAGE
+  stage: test
+  services:
+    - docker:18.09-dind
+  variables:
+    SPRING_PROFILES_ACTIVE: local
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_TLS_CERTDIR: ''
+    DOCKER_DRIVER: overlay2
+  script:
+    - mvn verify
+  artifacts:
+    when: on_failure
+    paths:
+      - target/surefire-reports
+
+
 Deploy Dev:
   stage: deploy
   image: debian:10-slim
@@ -66,14 +85,14 @@ Deploy Dev:
     - echo "$SSH_IDENTITY" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    - ssh-keyscan 16.171.133.36  >> ~/.ssh/known_hosts
+    - ssh-keyscan 13.51.172.71 >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
 
   script:
 
     - mkdir youtubemusic
     - envsubst < .dev/docker-compose.template.yml > youtubemusic/docker-compose.yml
-    - scp -r youtubemusic ec2-user@16.171.133.36:"/home/ec2-user/C:UsersdilayOneDriveBelgeler"
-    - ssh ec2-user@16.171.133.36  "cd '/home/ec2-user/C:UsersdilayOneDriveBelgeler/youtubemusic' && docker-compose up -d "
+    - scp -r youtubemusic ec2-user@13.51.172.71:"/home/ec2-user/C:UsersdilayOneDriveBelgeler"
+    - ssh ec2-user@13.51.172.71  "cd '/home/ec2-user/C:UsersdilayOneDriveBelgeler/youtubemusic' && docker-compose up -d "
 
 
