--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,19 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <includes>
+                        <include>**/*IT</include>
+                        <include>**/*Tests</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
+
     </build>
 
 </project>
